Spel fouten uit de tekst gehaald en een foto toegevoegd die niet door kwam op de pagina, about me

--- a/about_me.html
+++ b/about_me.html
@@ -47,7 +47,7 @@
     <section class="sct__art">
         <article class="art__backstory">
             <h1 class="h1__title">Van Creatieve Keukens naar Digitale Werelden: Mijn Reis naar de Wereld van ICT</h1>
-            <img src="Media/levensweg.PNG" alt="levensweg"/>
+            <img src="Media/levensweg.png" alt="levensweg"/>
 
 
             <p>Vanaf mijn vroegste herinneringen ben ik gefascineerd door technologie en vooruitgang. Het verzamelen van data en omgaan met getallen lijken als een tweede natuur voor mij te zijn. Hoewel ik me niet bewust ben van de innerlijke werking van mijn gedachten, heb ik altijd ongemerkt met cijfers gespeeld. Deze fascinatie begeleidde me door mijn vroege studies, waar ik een bewonderaar werd van economie en boekhouden.</p><br/>
