--- a/ontwikkeling.html
+++ b/ontwikkeling.html
@@ -55,7 +55,7 @@
         <h3>ROL 	Programmeur</h3>
         <p> OLR3	De gegradueerde realiseert (onderdelen van) softwareapplicaties en gegevensstructuren op basis van de analyse en het projectplan, de beschikbare tools, de vooropgestelde methodiek en de eigen planning.<br>
             OLR4	De gegradueerde is medeverantwoordelijk voor de eigen ICT-infrastructuur en draagt bij tot de gedeelde ICT-infrastructuur nodig voor het ontwikkelen, testen en in productie brengen van projecten.<br>
-            OLR5	De gegradueerde programmeert softwaretoepassingen volgens de standaarden en afspraken binnen de organisatie zoals beschreven in de bedrijfsprocedures, (kwaliteits)standaarden, de voorschriften en eisen voor informatieveiligheid.<br>
+            OLR5	De gegradueerde programmeert softwaretoepassingen volgens de standaarden en afspraken binnen de organisatie zoals beschreven in de bedrijfsprocedures, (kwaliteit(s))standaarden, de voorschriften en eisen voor informatieveiligheid.<br>
             OLR6	De gegradueerde gaat in overleg met de ontwikkelaar, projectleider of functioneel analist na of het opgeleverde product onderhoud en/of aanpassingen nodig heeft. De gegradueerde voert het onderhoud en de aanpassingen op een projectmatige manier uit, rekening houdend met eerder gemaakte afspraken.</p>
         <h3>ROL	Tester</h3>
         <p> OLR7	De gegradueerde gaat volgens (zelf ontwikkelde) testscenario’s de werking en functionaliteit van de gerealiseerde code na, gebruikmakend van de juiste tools, en verbetert deze op basis van feedback van de ontwikkelaar, de projectleider en/of gebruikers.</p>
@@ -74,11 +74,11 @@
         <div class="semester2">
             <h2>Ontwerper:</h2>
             <h3>Waar sta je momenteel?</h3>
-            <p>Ben hier al wat in gegroeid, ook al is het soms verradelijk om een opdracht te wien en te denken, dat lukt me op een uurtje. Hier doen we nu maal 2.5 om zeker te zijn.</p>
+            <p>Ben hier al wat in gegroeid, ook al is het soms verradelijk om een opdracht te zien en te denken, dat lukt me op een uurtje. Hier doen we nu maal 2.5 om zeker te zijn.</p>
             <h3>Wat lukt je al goed?</h3>
             <p>Om te communiceren naar wat net nodig is en zeker verwacht wordt van het project.</p>
             <h3>Wat lukt je nog niet?</h3>
-            <p>Het correct inschatten van de werktijd, hier zal sowiesp verder aan gewerkt worden.</p>
+            <p>Het correct inschatten van de werktijd, hier zal sowieso verder aan gewerkt worden.</p>
             <h2>Programmeur:</h2>
             <h3>Waar sta je momenteel?</h3>
             <p>Dit gaat al stukken beter dan het eerste semester. De verantwoordelijkheid die ik kreeg in het project als Database en Backend (WebAPI) verantwoordelijke lagen me wel.
@@ -98,12 +98,12 @@
             <h3>Waar sta je momenteel?</h3>
             <p>Dit is ook al enkele stappen vooruit gegaan. Heb al veel communicatie gehad met mijn team en gevraagd of aangegeven naar de noden van de code voor de applicatie.</p>
             <h3>Wat lukt je al goed?</h3>
-            <p>De communicatie tussen mewelf en het team</p>
+            <p>De communicatie tussen mezelf en het team</p>
             <h3>Wat lukt je nog niet?</h3>
             <p>Overzichtelijke documentatie te schrijven van mijn code. Vergeet nog vaak om dit meteen samen met mijn code te doen.</p>
             <h2>Levenslang lerende IT-Professional:</h2>
             <h3>Waar sta je momenteel?</h3>
-            <p>Heb veel bijgeleerd door zelfstudie. Dagelijks iets nieuws leren of artiekels lezen heeft geholpen met het beter begrijpen van de leerstof</p>
+            <p>Heb veel bijgeleerd door zelfstudie. Dagelijks iets nieuws leren of artikels lezen heeft geholpen met het beter begrijpen van de leerstof</p>
             <h3>Wat lukt je al goed?</h3>
             <p>Concreet zoeken naar artikels of documentatie over een onderwerp waar ik op dat moment mee bezig ben</p>
             <h3>Wat lukt je nog niet?</h3>
