--- a/opdrachten.html
+++ b/opdrachten.html
@@ -42,13 +42,13 @@
         <small>31-05-2024</small>
 
         <h3>Beschrijving:</h3>
-        <p>Je ontwikkelt een website waar je door jou gekozen producten op verhuurt. Je haalt data op uit je eigen datbase via je eigen ontwikkelde WebAPI.</p>
+        <p>Je ontwikkelt een website waar je door jou gekozen producten op verhuurt. Je haalt data op uit je eigen database via je eigen ontwikkelde WebAPI.</p>
         <h3>Persoonlijke uitdagingen:</h3>
         <p>Het opdelen van de taken was best moeilijk in het begin. Wie ging wat doen en hoe gingen we dit project aangaan? De materie beheersen dat eigenlijk nog niet gekend was, was een grote stap.
             Waar documentatie hierover vinden en hoe code begrijpen waar je nog nooit over gehoord hebt.</p>
         <h3>Wat heb ik bijgeleerd:</h3>
         <p>Heb meer over databases geleerd en wat WebAPI's inhouden. Ook de opbouw voor de WebAPI, hoe starten met Enteties, de connectie tussen database en backend en hoe we al
-            deze informatie doorgeven naar de frontend om zo een dynamische website op te bouwen die al zijn informatie over de prodcuten elders bewaart.</p>
+            deze informatie doorgeven naar de frontend om zo een dynamische website op te bouwen die al zijn informatie over de producten elders bewaart.</p>
     </div>
     <div class="project-maui container-links">
         <img src="Media/cirkel.JPG" alt="cirkel-logo">
