--- a/reflectie.html
+++ b/reflectie.html
@@ -44,13 +44,13 @@
             Nieuwe leerstof, meteen in het diepe gegooid worden, maar had dit ook verwacht. Gaandeweg werd alles steeds duidelijker en werd de code een soort van 5de taal voor mij (spreek dan ook 4 talen). </p>
         <h2>Heb je veel steun gehad van je teamleden en lectoren? </h2>
         <p>Heb vooral steun gehaald bij mijn medestudenten.
-            Ik geef eerlijk toe dat de communicatie met de lectoren niet altijd even positief verliepen in mijn ogen, maar heb dit zeker zien vernaderen naar een positieve zin naar de laatste weken van het project.</p>
+            Ik geef eerlijk toe dat de communicatie met de lectoren niet altijd even positief verliepen in mijn ogen, maar heb dit zeker zien veranderen naar een positieve zin naar de laatste weken van het project.</p>
         <h2>Wat zijn de belangrijkste zaken die je bijgeleerd hebt op technisch vlak?</h2>
         <p>Hoe ik bepaalde informatie die ik kreeg met een kritisch oog moest bekijken. Of hoe ik zelf documentatie moest opzoeken.
-            Ook vond ik het heel interessant om de connectie tussen een databank, WebAPI te maken. Hoe ik al mijn data kon ophalan, deze dan op een bepaalde manier doorgeven zodat er enkel bepaalde data getoond kon worden.</p>
+            Ook vond ik het heel interessant om de connectie tussen een databank, WebAPI te maken. Hoe ik al mijn data kon ophalen, deze dan op een bepaalde manier doorgeven zodat er enkel bepaalde data getoond kon worden.</p>
         <h2>Hoe ben jij gegroeid in de 3 soft skills waaraan jullie als groep hebben gewerkt tijdens WPL2? Verduidelijk aan de hand van concrete voorbeelden.</h2>
         <p>Zelfstandig: Hier ben ik behoorlijk in gegroeid door meer zelf op te zoeken in plaats van continu om raad te gaan bij de lectoren. Dit heeft er voor gezorgd dat ik sneller dingen onder de knie begon te krijgen.</p>
-        <p>Inleving: Heb er voor gezorgd dat ik meer tijd nam om naar mijn colleg's te luisteren en samen tot een oplossing te komen. Ook op empatisch vlak heb ik heel anders leren reageren dan voordien.
+        <p>Inleving: Heb er voor gezorgd dat ik meer tijd nam om naar mijn collega's te luisteren en samen tot een oplossing te komen. Ook op empatisch vlak heb ik heel anders leren reageren dan voordien.
             Als er wat mis was met een collega, probeerde ik naar zijn probleem te luisteren en hem een hart onder de riem te steken.
             Ook hebben we meer kennis beginnen maken met andere collega's van andere teams.</p>
         <p>Flexibel: We hebben heel wat stress situaties mee gemaakt in heel ons traject binnen WPL2, maar dit heeft natuurlijk er voor gezorgd dat we er mee moesten leren omgaan, of dat we ons er aan moesten aanpassen.
@@ -72,21 +72,21 @@
 
         <h3>ONDERNEMEND EN INNOVATIEF:</h3>
         <h4>Wat versta jij onder een ken-doementaliteit (ondernemend zijn in de brede zin van het woord) en hoe zie je dat in de opleiding die je bent aangevat?</h4>
-        <p>Durven aanpakken en iets realiseren. Het voordeel van deze opleding zorgt er voor dat we vanalles kunnen creeren wat er in ons opkomt.</p>
+        <p>Durven aanpakken en iets realiseren. Het voordeel van deze opleding zorgt er voor dat we van alles kunnen creëren wat er in ons opkomt.</p>
         <h4>Hoe ver sta jij op dit moment al in een ken-doementaliteit?</h4>
-        <p>Iedere dag komen we een stapje dichter bij nieuwe zaken in ons leven. Heb dit semester bijvoorbeeld al veel opgengestaan om naar evenementen te gaan en met mensen te netwerken binnen de IT wereld.</p>
+        <p>Iedere dag komen we een stapje dichter bij nieuwe zaken in ons leven. Heb dit semester bijvoorbeeld al veel open gestaan om naar evenementen te gaan en met mensen te netwerken binnen de IT wereld.</p>
 
         <h3>(INTERNATIONAAL) SAMEN (NET)WERKEN:</h3>
         <h4>Hoe ziet jouw netwerk er op dit moment uit? Kan je dit netwerk inzetten in functie van de opleiding die je hebt aangevat?</h4>
-        <p>Mijn netwerk is steeds meer en meer aant het uitbreiden, vooral op IT vlak. Zo heb ik connecties gemaakt via LinkedIn met recuiters van bedrijven en gesproken met hun over potentiele stageplekken.</p>
+        <p>Mijn netwerk is steeds meer en meer aan het het uitbreiden, vooral op IT vlak. Zo heb ik connecties gemaakt via LinkedIn met recruiters van bedrijven en gesproken met hun over potentiele stageplekken.</p>
         <h4>Hoe zou jij internationaal samen kunnen werken in de opleiding die je hebt aangevat?</h4>
-        <p>Ik ben in gesprek met potentiele stageplaatsen die ook vestigingen hebben in het buitenland. Dit zou iets positiefs kunnen zijn voor na het afstuderen. Een kans om in het buitenland te werken voor hetzelfde bedrijf waar ik misschien stage kan lopen.</p>
+        <p>Ik ben in gesprek met potentiële stageplaatsen die ook vestigingen hebben in het buitenland. Dit zou iets positiefs kunnen zijn voor na het afstuderen. Een kans om in het buitenland te werken voor hetzelfde bedrijf waar ik misschien stage kan lopen.</p>
 
         <h3>(MULTI)DISCIPLINAIR:</h3>
         <h4>Wat weet je op dit moment al over de inhouden van je opleiding?</h4>
-        <p>Dat er meer in de IT wereld te doen is dan standaar codeerwerk. Het openstaan voor deze disciplines is iets wat me hongerig houd en de zin om steeds te blijven leren vergroot.</p>
+        <p>Dat er meer in de IT wereld te doen is dan standaard codeerwerk. Het openstaan voor deze disciplines is iets wat me hongerig houd en de zin om steeds te blijven leren vergroot.</p>
         <h4>Met welke andere disciplines (opleidingen / beroepen / ...) zou jij in aanraking kunnen komen in je opleiding?</h4>
-        <p>Van grafische vormgevers tot managers en CEO's. En de transparantie van sommige bedrijven is wel prahtig om te zien.</p>
+        <p>Van grafische vormgevers tot managers en CEO's. En de transparantie van sommige bedrijven is wel prachtig om te zien.</p>
     </section>
     <h1 class="semester header__reflectie">Semester 1</h1>
     <div class="deel1">
