spelfout uit reflectie gehaald

--- a/reflectie.html
+++ b/reflectie.html
@@ -78,7 +78,7 @@
 
         <h3>(INTERNATIONAAL) SAMEN (NET)WERKEN:</h3>
         <h4>Hoe ziet jouw netwerk er op dit moment uit? Kan je dit netwerk inzetten in functie van de opleiding die je hebt aangevat?</h4>
-        <p>Mijn netwerk is steeds meer en meer aan het het uitbreiden, vooral op IT vlak. Zo heb ik connecties gemaakt via LinkedIn met recruiters van bedrijven en gesproken met hun over potentiele stageplekken.</p>
+            <p>Mijn netwerk is steeds meer en meer aan het het uitbreiden, vooral op IT vlak. Zo heb ik connecties gemaakt via LinkedIn met recruiters van bedrijven en gesproken met hun over potentiële stageplekken.</p>
         <h4>Hoe zou jij internationaal samen kunnen werken in de opleiding die je hebt aangevat?</h4>
         <p>Ik ben in gesprek met potentiële stageplaatsen die ook vestigingen hebben in het buitenland. Dit zou iets positiefs kunnen zijn voor na het afstuderen. Een kans om in het buitenland te werken voor hetzelfde bedrijf waar ik misschien stage kan lopen.</p>
 
