spelling in naam van school in CV aangepast

--- a/curriculum_vitae.html
+++ b/curriculum_vitae.html
@@ -206,7 +206,7 @@
                 </tr>
                 <tr>
                     <td>Leerkracht Ad Interim</td>
-                    <td>Sint Augustinusinstituut, Bree</td>
+                    <td>Sint Augustinus Instituut, Bree</td>
                     <td>oktober 2010 - februari 2011</td>
                     <td>Als tijdelijk vervangende leerkracht voedingsleer gaf ik leerlingen theoretische kennis over ingrediënten, hielp ik bij het bereiden van eenvoudige alledaagse gerechten en beoordeelde ik de GIP-proeven van zesdejaars studenten. Daarnaast fungeerde ik als stagementor.</td>
                 </tr>
